<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="thirdlaw.arkka.vyapar.UploadProduct">

    <ImageView
        android:id="@+id/arrow_back_add_product"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/productUploadBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/add_product_save"
        android:text="@string/save_btn"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/upload_productTxt"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView19"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:scaleType="centerCrop"
        android:src="#fff"
        app:civ_border_color="#AE634C"
        app:civ_border_width="5dp"
        android:layout_marginTop="112dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView36"
        app:srcCompat="@drawable/pic_image" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_pic"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/imageView19"
        app:layout_constraintStart_toStartOf="@+id/imageView19"
        app:layout_constraintTop_toBottomOf="@+id/imageView19" />

    <Spinner
        android:id="@+id/spinner_add_product"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:background="@drawable/spinner_add_product_bg"
        app:layout_constraintEnd_toEndOf="@+id/textView35"
        app:layout_constraintStart_toStartOf="@+id/textView35"
        app:layout_constraintTop_toBottomOf="@+id/textView35" />

    <EditText
        android:id="@+id/uploadSubcat"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/add_product_inputbox_bg"
        android:ems="10"
        android:hint="@string/sub_cat"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/spinner_add_product"
        app:layout_constraintStart_toStartOf="@+id/spinner_add_product"
        app:layout_constraintTop_toBottomOf="@+id/spinner_add_product" />

    <EditText
        android:id="@+id/quantityUpload"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/add_product_inputbox_bg"
        android:ems="10"
        android:hint="@string/avl_quan"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/uploadSubcat"
        app:layout_constraintStart_toStartOf="@+id/uploadSubcat"
        app:layout_constraintTop_toBottomOf="@+id/uploadSubcat" />

    <TextView
        android:id="@+id/timeText"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/add_product_inputbox_bg"
        android:gravity="center"
        android:hint="@string/select_date"
        app:layout_constraintEnd_toEndOf="@+id/quantityUpload"
        app:layout_constraintStart_toStartOf="@+id/quantityUpload"
        app:layout_constraintTop_toBottomOf="@+id/quantityUpload" />


</androidx.constraintlayout.widget.ConstraintLayout>