<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MessageToAdmin">

    <ImageView
        android:id="@+id/arrow_back_message"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />
    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/message_txt"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sendMessage"
        android:layout_width="320dp"
        android:layout_height="250dp"
        android:layout_marginTop="148dp"
        android:background="@drawable/sender_bg"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:maxLines="50"
        android:padding="16dp"
        android:paddingStart="20dp"
        android:textColorHint="#AE634C"
        android:textColor="#AE634C"
        android:hint="@string/message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sendMsgBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="79dp"
        android:background="@drawable/button_bg"
        android:text="@string/send"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/sendMessage"
        app:layout_constraintStart_toStartOf="@+id/sendMessage"
        app:layout_constraintTop_toBottomOf="@+id/sendMessage" />
</androidx.constraintlayout.widget.ConstraintLayout>